--- a/Sass/accueil.scss
+++ b/Sass/accueil.scss
@@ -10,6 +10,7 @@ html {
     box-shadow: 0px 2px 4px 0px #00000026;
     padding: 15px;
     position: relative;
+    
 
 
 
@@ -69,14 +70,18 @@ html {
         text-decoration: none;
         transition-property: transform;
         transition-duration: 400ms;
+         
+        &:hover {
+            transform: scale(1.15);
+            background-image: linear-gradient(193.33deg, #a371df -11.44%, #f882d6 123.93%);
+            box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, .5);
+            }
+        }
 
 
+    
 
-    }
-
-    &:hover {
-        transform: scale(1.15);
-    }
+ 
 
 
     &__title {
