--- a/Sass/restaurant.scss
+++ b/Sass/restaurant.scss
@@ -5,9 +5,11 @@ html {
 
 
 
-header {
+.header {
     box-shadow: 0px 2px 4px 0px #00000026;
     padding: 15px;
+    display: flex;
+    justify-content: center;
 
 
     &__logo {
@@ -22,6 +24,8 @@ header {
         position: absolute;
         left: 17px;
         top: 37px;
+        
+        
     }
 }
 
@@ -47,7 +51,6 @@ header {
     height: 29px;
     display: flex;
     align-items: center;
-
     padding: 15px;
 
 
@@ -62,8 +65,8 @@ header {
 
 
     &__icon {
-        width: 22px;
-        height: 21px;
+        width: 10px;
+        height: 10px;
         margin-left: 60px;
         cursor: pointer;
 
@@ -166,6 +169,7 @@ header {
     background-color: #99e2d0;
     margin: -16px -70px -16px 16px;
     width: 64px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,8 +182,8 @@ header {
 }
 
 .item__icon {
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
@@ -277,6 +281,10 @@ header {
         display: flex;
         justify-content: center;
         padding: 50px 0;
+
+        &:active {
+            background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+        }
     }
 
     .menu {
