--- a/css/accueil.css
+++ b/css/accueil.css
@@ -4,6 +4,45 @@ html {
   font-family: Roboto, sans-serif;
 }
 
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  animation: loader .01s;
+  animation-delay: 3s;
+  animation-fill-mode: both;
+  
+  
+}
+
+.loader .spinner {
+  width: 40px;
+  height: 40px;
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid violet;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+ 
+}
+@keyframes loader {
+  100% {
+    opacity: 0;
+    
+  }
+}
+
 .header {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
   padding: 15px;
