--- a/css/accueil.css
+++ b/css/accueil.css
@@ -88,6 +88,8 @@ html {
 }
 .info__btn:hover {
   transform: scale(1.15);
+  background-image: linear-gradient(193.33deg, #a371df -11.44%, #f882d6 123.93%);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.5);
 }
 .info__title {
   font-size: 24px;
@@ -101,6 +103,11 @@ html {
 .fonct {
   background: #FFFFFF;
 }
+
+.fonct__title{
+  padding-left: 70px;
+}
+
 .fonct__subtitle {
   padding: 20px;
   margin: 15px;
@@ -137,14 +144,16 @@ html {
 .restaurants {
   background: #F6F6F6;
 }
-
+.restaurants__title {
+  padding: 30px 0 0 70px;
+}
 .cards {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 18px;
-  padding: 30px;
-  column-gap: 2rem;
-  row-gap: 2rem;
+  padding: 30px 80px;
+  column-gap: 5rem;
+  row-gap: 3rem;
 }
 
 .card {
@@ -180,14 +189,13 @@ html {
 .card .card__title {
   margin: 0 0 5px 0;
 }
-.card .card__icon {
-  width: 82px;
-  height: 21px;
-  display: flex;
-  position: relative;
-  top: 5px;
-  left: 220px;
-  color: #9356DC;
+.icon:hover {
+   background-color: violet;
+ 
+
+
+
+
 }
 
 .footer {
@@ -207,6 +215,7 @@ html {
 .footer__list {
   list-style: none;
   padding: 0;
+  gap: 20px;
 }
 .footer__line {
   margin: 10px 0;
