--- a/Sass/accueil.scss
+++ b/Sass/accueil.scss
@@ -2,6 +2,7 @@ body,
 html {
 
     font-family: Roboto, sans-serif;
+    margin: 0;
    
 }
 
@@ -11,7 +12,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(209, 209, 209, 0.75);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,14 +40,14 @@ html {
   }
   @keyframes loader {
     100% {
-      opacity: 0;
-      
+     
+      display: none;
     }
   }
 
 .header {
     box-shadow: 0px 2px 4px 0px #00000026;
-    padding: 15px;
+    padding: 15px 0;
     position: relative;
   
 
@@ -86,7 +87,7 @@ html {
 
 
 .info {
-    padding: 30px;
+    padding: 20px 20px 60px 20px;
     text-align: center;
     background-color: #fafafa;
 
@@ -94,7 +95,7 @@ html {
     &__btn {
 
 
-        padding: 10px 20px;
+        padding: 15px 25px;
         border-radius: 25px;
         background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
         box-shadow: 0px 4px 10px 0px #00000040;
@@ -127,6 +128,7 @@ html {
     &__subtitle {
         font-size: 18px;
         font-weight: 300;
+        margin-bottom: 40px;
 
 
     }
@@ -136,13 +138,18 @@ html {
 
 .fonct {
     background: #FFFFFF;
+    padding: 20px 0 40px 0;
 
     &__title {
-        padding-left: 70px;
+        padding-left: 20px;
+    }
+    
+    &__subtitles{
+        padding-left: 15px;
     }
 
     &__subtitle {
-        padding: 20px;
+        padding: 10px;
         margin: 15px;
         border-radius: 20px;
         box-shadow: 0px 4px 15px 0px #00000026;
@@ -190,9 +197,10 @@ html {
 
 .restaurants {
     background: #F6F6F6;
+    padding: 30px 0 60px 0px;
 
     &__title{
-        padding: 30px 0 0 70px;
+        padding-left: 20px;
     }
 
 }
@@ -202,7 +210,7 @@ html {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 18px;
-    padding: 30px 80px;
+    padding: 0px 15px;
     column-gap: 5rem;
     row-gap: 3rem;
 }
