--- a/Sass/restaurant.scss
+++ b/Sass/restaurant.scss
@@ -23,8 +23,9 @@ html {
     &__btn {
         position: absolute;
         left: 17px;
-        top: 37px;
+        top: 30px;
         text-decoration: none;
+        color: black;
         
         
     }
@@ -81,7 +82,7 @@ html {
 }
 
 .menu {
-    width: 100%;
+    
     padding-left: 15px;
 
     &__title {
@@ -106,7 +107,7 @@ html {
 .cards {
     list-style: none;
     padding: 0;
-    padding-right: 10px;
+  
 }
 
 .card {
@@ -212,7 +213,7 @@ html {
     padding-top: 30px;
 
     &__btn {
-        padding: 10px 20px;
+        padding: 15px 40px;
         border-radius: 25px;
         background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
         box-shadow: 0px 4px 10px 0px #00000040;
