--- a/css/accueil.css
+++ b/css/accueil.css
@@ -2,6 +2,7 @@
 body,
 html {
   font-family: Roboto, sans-serif;
+  margin: 0;
 }
 
 .loader {
@@ -10,16 +11,14 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(209, 209, 209, 0.75);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  animation: loader .01s;
+  animation: loader 0.01s;
   animation-delay: 3s;
   animation-fill-mode: both;
-  
-  
 }
 
 .loader .spinner {
@@ -32,20 +31,21 @@ html {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
- 
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 @keyframes loader {
   100% {
-    opacity: 0;
-    
+    display: none;
   }
 }
-
 .header {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
-  padding: 15px;
+  padding: 15px 0;
   position: relative;
 }
 .header__logo {
@@ -70,12 +70,12 @@ html {
 }
 
 .info {
-  padding: 30px;
+  padding: 20px 20px 60px 20px;
   text-align: center;
   background-color: #fafafa;
 }
 .info__btn {
-  padding: 10px 20px;
+  padding: 15px 25px;
   border-radius: 25px;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
@@ -98,15 +98,21 @@ html {
 .info__subtitle {
   font-size: 18px;
   font-weight: 300;
+  margin-bottom: 40px;
 }
 
 .fonct {
   background: #FFFFFF;
+  padding: 20px 0 40px 0;
 }
-
-
+.fonct__title {
+  padding-left: 20px;
+}
+.fonct__subtitles {
+  padding-left: 15px;
+}
 .fonct__subtitle {
-  padding: 20px;
+  padding: 10px;
   margin: 15px;
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
@@ -140,13 +146,17 @@ html {
 
 .restaurants {
   background: #F6F6F6;
+  padding: 30px 0 60px 0px;
+}
+.restaurants__title {
+  padding-left: 20px;
 }
 
 .cards {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 18px;
-  padding: 30px 80px;
+  padding: 0px 15px;
   column-gap: 5rem;
   row-gap: 3rem;
 }
@@ -160,7 +170,6 @@ html {
   text-decoration: none;
   position: relative;
   color: black;
- 
 }
 .card__img {
   height: 190px;
@@ -185,19 +194,14 @@ html {
 .card .card__title {
   margin: 0 0 5px 0;
 }
-.card__icon {
-
- width: 15px;
-
-}
-
-.card__icon:hover {
-   background-color: violet;
- 
-
-
-
-
+.card .card__icon {
+  width: 82px;
+  height: 21px;
+  display: flex;
+  position: relative;
+  top: 5px;
+  left: 220px;
+  color: #9356DC;
 }
 
 .footer {
@@ -236,14 +240,11 @@ html {
 /* Le code ci-dessous correspond à la version responsive uniquement */
 /****** Media queries ***********/
 @media (min-width: 1024px) {
- 
   .fonct__subtitles {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    
   }
- 
   .cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
