--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -6,6 +6,8 @@ html {
 .header {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
   padding: 15px;
+  display: flex;
+  justify-content: center;
 }
 .header__logo {
   text-align: center;
@@ -17,8 +19,9 @@ html {
 .header__btn {
   position: absolute;
   left: 17px;
-  top: 37px;
+  top: 30px;
   text-decoration: none;
+  color: black;
 }
 
 .img {
@@ -38,7 +41,6 @@ html {
 }
 
 .restaurant {
-  
   height: 29px;
   display: flex;
   align-items: center;
@@ -61,7 +63,6 @@ html {
 }
 
 .menu {
-  width: 100%;
   padding-left: 15px;
 }
 .menu__title {
@@ -83,7 +84,6 @@ html {
 .cards {
   list-style: none;
   padding: 0;
-  padding-right: 10px;
 }
 
 .card {
@@ -177,7 +177,7 @@ html {
   padding-top: 30px;
 }
 .info__btn {
-  padding: 10px 20px;
+  padding: 15px 40px;
   border-radius: 25px;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
@@ -237,6 +237,9 @@ html {
     display: flex;
     justify-content: center;
     padding: 50px 0;
+  }
+  .restaurant:active {
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   }
   .menu {
     width: 70%;
