--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
+body,
 html {
   font-family: Roboto, sans-serif;
+  margin: 0;
 }
 
 .header {
@@ -52,14 +54,13 @@ html {
   font-weight: 400;
 }
 .restaurant__icon {
-  width: 15px;
-  height: 13px;
   margin-left: 30px;
-  border-radius: 5px;
+  font-size: 25px;
   cursor: pointer;
+  transition-duration: 1s;
 }
 .restaurant__icon:hover {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  color: violet;
 }
 
 .menu {
@@ -114,6 +115,8 @@ html {
 }
 .card__title, .card__subtitle {
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 @keyframes item {
@@ -159,7 +162,6 @@ html {
   align-items: center;
   justify-content: center;
   border-radius: 100px;
-  transform: rotate(180deg);
   transition-duration: 0.6s;
 }
 
@@ -255,6 +257,7 @@ html {
     display: flex;
     margin-right: 200px;
     margin-bottom: -30px;
+    gap: 16px;
   }
 }
 
