--- a/Sass/restaurant.scss
+++ b/Sass/restaurant.scss
@@ -216,7 +216,7 @@ html {
 .info {
     display: flex;
     justify-content: center;
-    padding-top: 30px;
+    padding-top: 20px;
 
     &__btn {
         padding: 15px 40px;
@@ -283,7 +283,7 @@ html {
 
     .restaurants {
         width: 80%;
-        height: 1400px;
+        height: 1370px;
         margin-left: 10%;
 
     }
@@ -291,7 +291,7 @@ html {
     .restaurant {
         display: flex;
         justify-content: center;
-        padding: 50px 0;
+        padding: 50px 0 30px 0;
 
         &:active {
             background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
