--- a/Sass/accueil.scss
+++ b/Sass/accueil.scss
@@ -266,6 +266,7 @@ html {
 
     }
 
+   
 
     .card__title {
 
@@ -274,18 +275,44 @@ html {
 
     }
 
-    .card__icon {
-
-       
-      font-size: 25px;
     
-      
-
-
-    }
-
-
 }
+
+
+.icon1{
+    position: relative;
+    left: 19px;
+
+    font-size: 25px;
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0;
+    }
+}
+
+.icon2 {
+    font-weight: 900;
+    color: transparent;
+    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    background-clip: text;
+     opacity: 0;
+    transition-duration: 1s;
+    position: relative;
+    left: -10px;
+    font-size: 25px;
+    cursor: pointer;
+    transition-duration: 1s;
+    
+
+
+    &:hover {
+        opacity: 1;
+        
+    }
+}
+
+
 
 
 .footer {
@@ -372,7 +399,8 @@ html {
     }
 .fonct__subtitle{ 
     padding: 15px;
-    padding-right: 70px;
+    width: 100%;
+    
 }
     .cards {
         display: grid;
