--- a/Sass/restaurant.scss
+++ b/Sass/restaurant.scss
@@ -28,8 +28,8 @@ html {
         top: 30px;
         text-decoration: none;
         color: black;
-        
-        
+
+
     }
 }
 
@@ -51,7 +51,7 @@ html {
 }
 
 .restaurant {
-   
+
     height: 29px;
     display: flex;
     align-items: center;
@@ -67,27 +67,43 @@ html {
 
     }
 
+    &__icon1{
+        position: relative;
+        left: 20px;
 
-    &__icon {
-    
-    margin-left: 30px;
-   
-    font-size: 25px;
-    
-    cursor: pointer;
-    transition-duration: 1s;
+        font-size: 25px;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 0;
+        }
+    }
+
+    &__icon2 {
+        font-weight: 900;
+        color: transparent;
+        background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+        background-clip: text;
+         opacity: 0;
+        transition-duration: 1s;
+        position: relative;
+        left: -5px;
+        font-size: 25px;
+        cursor: pointer;
+        transition-duration: 1s;
+        
 
 
         &:hover {
-            color:  violet;
-
+            opacity: 1;
+            
         }
     }
 
 }
 
 .menu {
-    
+
     padding-left: 15px;
 
     &__title {
@@ -112,7 +128,7 @@ html {
 .cards {
     list-style: none;
     padding: 0;
-  
+
 }
 
 .card {
@@ -256,7 +272,7 @@ html {
     &__list {
         list-style: none;
         padding: 0;
-        gap:20px;
+        gap: 20px;
     }
 
     &__line {
