--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -41,28 +41,27 @@ html {
   z-index: 1;
   position: relative;
 }
-
-.restaurant {
+.restaurants .restaurant {
   height: 29px;
   display: flex;
   align-items: center;
   padding: 15px;
 }
-.restaurant__title {
+.restaurants .restaurant__title {
   font-family: Shrikhand;
   font-style: italic;
   font-weight: 400;
 }
-.restaurant__icon1 {
+.restaurants .restaurant__icon1 {
   position: relative;
   left: 20px;
   font-size: 25px;
   cursor: pointer;
 }
-.restaurant__icon1:hover {
+.restaurants .restaurant__icon1:active {
   opacity: 0;
 }
-.restaurant__icon2 {
+.restaurants .restaurant__icon2 {
   font-weight: 900;
   color: transparent;
   background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
@@ -73,9 +72,9 @@ html {
   left: -5px;
   font-size: 25px;
   cursor: pointer;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
 }
-.restaurant__icon2:hover {
+.restaurants .restaurant__icon2:active {
   opacity: 1;
 }
 
@@ -256,8 +255,30 @@ html {
     justify-content: center;
     padding: 50px 0 30px 0;
   }
-  .restaurant:active {
-    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  .restaurant__icon1 {
+    position: relative;
+    left: 19px;
+    font-size: 25px;
+    cursor: pointer;
+  }
+  .restaurant__icon1:hover {
+    opacity: 0;
+  }
+  .restaurant__icon2 {
+    font-weight: 900;
+    color: transparent;
+    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    background-clip: text;
+    opacity: 0;
+    transition-duration: 1s;
+    position: relative;
+    left: -6px;
+    font-size: 25px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+  }
+  .restaurant__icon2:hover {
+    opacity: 1;
   }
   .menu {
     width: 70%;
