--- a/Sass/restaurant.scss
+++ b/Sass/restaurant.scss
@@ -68,17 +68,14 @@ html {
         }
 
         &__icon2 {
-            font-weight: 900;
-            color: transparent;
             background-clip: content-box;
             color: #9356DC;
             opacity: 0;
-            transition-duration: 1s;
             position: relative;
             left: -5px;
             font-size: 25px;
             cursor: pointer;
-            transition-duration: .5s;
+            transition-duration: .8s;
 
             &:active {
                 opacity: 1;
@@ -118,7 +115,6 @@ html {
 .card {
     width: 93%;
     height: 69px;
-    gap: 0px;
     border-radius: 15px;
     background: #FFFFFF;
     display: flex;
@@ -132,8 +128,7 @@ html {
     animation: item .6s;
     animation-timing-function: cubic-bezier(.5, 1.58, .34, .82);
     animation-fill-mode: both;
-    transform: scale(0);
-    max-width: 100%;
+   
 
     &__content {
         white-space: nowrap;
@@ -221,6 +216,7 @@ html {
         font-size: 16px;
         font-weight: 500;
         text-decoration: none;
+        transition-duration: 400ms;
 
         &:hover {
             background-image: linear-gradient(193.33deg, #a371df -11.44%, #f882d6 123.93%);
