--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -62,17 +62,14 @@ html {
   opacity: 0;
 }
 .restaurants .restaurant__icon2 {
-  font-weight: 900;
-  color: transparent;
   background-clip: content-box;
   color: #9356DC;
   opacity: 0;
-  transition-duration: 1s;
   position: relative;
   left: -5px;
   font-size: 25px;
   cursor: pointer;
-  transition-duration: 0.5s;
+  transition-duration: 0.8s;
 }
 .restaurants .restaurant__icon2:active {
   opacity: 1;
@@ -105,7 +102,6 @@ html {
 .card {
   width: 93%;
   height: 69px;
-  gap: 0px;
   border-radius: 15px;
   background: #FFFFFF;
   display: flex;
@@ -119,8 +115,6 @@ html {
   animation: item 0.6s;
   animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
   animation-fill-mode: both;
-  transform: scale(0);
-  max-width: 100%;
 }
 .card__content {
   white-space: nowrap;
@@ -202,6 +196,7 @@ html {
   font-size: 16px;
   font-weight: 500;
   text-decoration: none;
+  transition-duration: 400ms;
 }
 .info__btn:hover {
   background-image: linear-gradient(193.33deg, #a371df -11.44%, #f882d6 123.93%);
