--- a/Sass/restaurant.scss
+++ b/Sass/restaurant.scss
@@ -167,6 +167,30 @@ html {
     animation-delay: 0.2s;
 }
 
+.num4 {
+    animation-delay: 0.3s;
+}
+
+.num5 {
+    animation-delay: 0.4s;
+}
+
+.num6 {
+    animation-delay: 0.5s;
+}
+
+.num7 {
+    animation-delay: 0.6s;
+}
+
+.num8 {
+    animation-delay: 0.7s;
+}
+
+.num9 {
+    animation-delay: 0.8s;
+}
+
 
 .item__confirmation {
     background-color: #99e2d0;
@@ -223,7 +247,7 @@ html {
             box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, .5);
         }
 
-    }
+    } 
 }
 
 .footer .container {
