--- a/css/accueil.css
+++ b/css/accueil.css
@@ -14,7 +14,7 @@ html {
   justify-content: center;
   align-items: center;
   z-index: 1;
-  animation: loader 0.1s;
+  animation: loader;
   animation-delay: 1.5s;
   animation-fill-mode: both;
 }
