--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -148,6 +148,30 @@ html {
   animation-delay: 0.2s;
 }
 
+.num4 {
+  animation-delay: 0.3s;
+}
+
+.num5 {
+  animation-delay: 0.4s;
+}
+
+.num6 {
+  animation-delay: 0.5s;
+}
+
+.num7 {
+  animation-delay: 0.6s;
+}
+
+.num8 {
+  animation-delay: 0.7s;
+}
+
+.num9 {
+  animation-delay: 0.8s;
+}
+
 .item__confirmation {
   background-color: #99e2d0;
   margin: -16px -70px -16px 16px;
